# add-schema

./: .gitignore  CMakeLists.txt  MySqlLexer.interp  MySqlLexer.py  MySqlParser.interp  MySqlParser.py  MySqlParser.tokens  MySqlParserListener.py  MySqlParserVisitor.py  README.md  main.py  mainwindow.cpp  mainwindow.h  requirements.txt  schema_modifier_listener.py  sql_exceptions.py  sql_utils.py  test_sql_utils.py
.github/workflows/: build.yml  release.yml
